2008-06-05  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/datatypes.py:
	Make Mr Buildbot a happy camper

2008-06-05  Johan Dahlin  <jdahlin@async.com.br>

	* glade3-plugin/kiwiwidgets.py:
	* glade3-plugin/kiwiwidgets.xml:
	* glade3-plugin/setup.py:
	Update the glade3 plugin to Juan's latest revival
	of catalog support in glade3

2008-06-05  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/gazpacholoader.py:
	Remove duplicate converters

	* kiwi/datatypes.py:
	* kiwi/ui/proxy.py:
	* kiwi/ui/proxywidget.py:
	* kiwi/ui/widgets/button.py:
	* tests/test_CheckButton.py:
	* tests/test_Entry.py:
	* tests/test_Scale.py:
	* tests/test_SpinButton.py:
	* tests/test_proxy.py:
	* tests/test_utils.py:
	Change data_type property from object to string and update tests
	and callsites.

2008-06-05  Johan Dahlin  <jdahlin@async.com.br>

	reviewed by: <delete if not using a buddy>

	* debian/changelog:
	* glade3-plugin/kiwiwidgets.py:
	* glade3-plugin/kiwiwidgets.xml:
	* glade3-plugin/setup.py:
	* kiwi/datatypes.py:
	* kiwi/ui/proxy.py:
	* kiwi/ui/proxywidget.py:
	* kiwi/ui/widgets/button.py:
	* tests/test_CheckButton.py:
	* tests/test_Entry.py:
	* tests/test_Scale.py:
	* tests/test_SpinButton.py:
	* tests/test_proxy.py:
	* tests/test_utils.py:

=== 1.9.22 ===
2008-05-29 George Y. Kussumoto <george@async.com.br>
	* NEWS:
	* debian/changelog:
	* doc/howto.tex:
	* doc/release-checklist.txt:
	* kiwi/__version__.py:
	* kiwi.spec:
	Release 1.9.22

2008-05-29  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/dateentry.py:
	Improve documentation a bit

2008-04-17  Ronaldo Maia  <romaia@async.com.br>

	reviewed by: Johan Dahlin  <jdahlin@async.com.br>

	* examples/listdialog.py:
	* kiwi/ui/objectlist.py:
	* kiwi/ui/widgets/contextmenu.py:
	Add support for context menus in objectlist

2008-04-14  Johan Dahlin  <johan@gnome.org>

	* kiwi/ui/objectlist.py (Column.attach): Do not expand stock columns.

2008-04-11  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/widgets/colorbutton.py: